# Attestation-Auth-Server

./: .gitignore  Cargo.toml  Dockerfile  README.md  ca.conf  cdh-config.toml  cert.pem  config.toml.in  docker-compose.yml  generate_certs.sh  localhost.conf
docker-compose/coco-as/: as-config.json  sgx_default_qcnl.conf
docker-compose/guest-components/: cdh-config.toml
src/: builder.rs  lib.rs  server.rs  session.rs
src/attestation/: coco_restful.rs  mod.rs
src/ca/: mod.rs
