[package]
name = "attestation-auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aas"
required-features = ["bin"]

[dependencies]
actix-web = { version = "4", optional = true }
actix-tls = { version = "3.3.0", optional = true }

anyhow = "1.0"
async-trait = "0.1.77"
base64 = "0.21"

chrono = "0.4.34"
clap = { version = "4", features = ["derive"], optional = true }
config = "0.14"

ecdsa = { version = "0.16.9", features = ["digest", "pem"] }
env_logger = { version = "0.11.2", optional = true }
kbs-types = "0.5.3"
log = "0.4.20"

p256 = "0.13.2"
rand = "0.8.5"
rcgen = { version = "0.12.1", features = ["x509-parser"]}
reqwest = "0.11.24"

rustls = { version = "0.21", optional = true }
rustls-pemfile = { version = "1", optional = true }

scc = "2"

serde = "1"
serde_json = "1"

sha2 = { version = "0.10", features = ["oid"] }
strum = { version = "0.25", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1", features = ["sync"]}
x509-parser = "0.16.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"]}

[features]
default = ["bin"]
bin = ["actix-web", "clap", "env_logger", "rustls", "rustls-pemfile", "strum", "thiserror", "tokio/rt-multi-thread", "tokio/fs", "tokio/rt", "tokio/macros", "actix-web/rustls-0_21", "actix-tls"]